src/test/deca/context/valid/Class2.deca
// Description:
//    Definition de class + declaration de class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class First{
 
}
{
    First F=new First();
    
}