src/test/deca/context/invalid/class11.deca
class First{}
class Second{}
{
    First F=new Second();
    First F=new First();
    
}